@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-20T01:05:31Z",
-  "count_outdated" : 142,
-  "uniques_outdated" : 117,
+  "timestamp" : "2023-07-20T08:14:39Z",
+  "count_outdated" : 143,
+  "uniques_outdated" : 118,
   "count" : 153,
   "uniques" : 128,
   "clones" : [
-    {
-      "timestamp": "2023-07-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-08T00:00:00Z",
       "count": 1,
