@@ -1,12 +1,7 @@
 {
-  "count": 11,
+  "count": 10,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2023-07-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-08T00:00:00Z",
       "count": 1,
